--- a/versions/index.html
+++ b/versions/index.html
@@ -156,9 +156,9 @@ strong{
 <table><thead><tr><th>支持的minecraft版本</th><th>模组版本及下载链接</th><th>简介</th></tr></thead>
 <tbody>
 <tr><td>Minecraft Java版 1.13</td><td>
-<a href="http://www.mcbbs.net/forum.php?mod=attachment&aid=MTE1NTYxN3xlMWQ5YTJiMHwxNTEyMzE2OTQ5fDk3NTUyNXw3NzA5MjM%3D">craftingpp-1.8</a></td><td><a href="https://craftingpp.neocities.org/1.8">网站链接</a></td></tr>
+<a href="http://www.mcbbs.net/forum.php?mod=attachment&aid=MTE1NTYxN3xlMWQ5YTJiMHwxNTEyMzE2OTQ5fDk3NTUyNXw3NzA5MjM%3D">craftingpp-1.8</a></td><td><a href="1.8/index.html">网站链接</a></td></tr>
 <tr><td>Minecraft Java版 1.12</td><td>
-<a href="http://www.mcbbs.net/forum.php?mod=attachment&aid=MTA4NDIzM3xhYjM4MDU1NnwxNTExNjI3NjYwfDk3NTUyNXw2OTY4NjE%3D">craftingpp-1.7.4</a></td><td><a href="https://craftingpp.neocities.org/1.7">网站链接</a></td></tr>
+<a href="http://www.mcbbs.net/forum.php?mod=attachment&aid=MTA4NDIzM3xhYjM4MDU1NnwxNTExNjI3NjYwfDk3NTUyNXw2OTY4NjE%3D">craftingpp-1.7.4</a></td><td><a href="1.7/index.html">网站链接</a></td></tr>
 <tr><td>Minecraft Java版 1.12 pre</td><td>
 <a href="http://www.mcbbs.net/thread-614296-1-1.html">craftingpp-1.6.1</a></td><td><a href="http://www.mcbbs.net/thread-614296-1-1.html">网站链接</a></td></tr>
 <tr><td>Minecraft Java版 1.11</td><td>craftingpp-1.5</td><td>不再提供</td></tr>
