--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta charset="utf-8" />
 <meta http-equiv="refresh" content="1;url=versions/index.html">
 <title>跳转中……</title>
 </head>
