删除重复的log

--- a/versions/1.8/index.html
+++ b/versions/1.8/index.html
@@ -342,7 +342,7 @@ function change(str){
 
 <!--简介-->
 <article>
-<p>本次模组更新至1.8版本——元素更新。该版本一方面将支持的Minecraft版本更新至1.13，另一方面引入了元素之力，增加了经验值在多方面的用途，包括方块处理、饰品制作、状态效果释放和附魔书的制作，同时在原版的世界生成、交易、合成上也添加了很多内容。</p>
+<p>本次更新为元素更新，模组版本1.8，支持 <strong>Minecraft Java 1.13</strong>。本次更新引入了元素之力，增加了经验值在多方面的用途，包括方块处理、饰品制作、状态效果释放和附魔书的制作，同时在原版的世界生成、交易、合成上也添加了很多新内容。</p>
 
 <h3>背包合成</h3>
 <p>涉及模组新增物品的合成均采用背包合成，方式如下：将材料放入背包右上角对应的3×3的格子里即可自动得到产物，数量和位置须完全吻合。</p>
@@ -353,6 +353,11 @@ function change(str){
 <tbody>
 <tr><td>Minecraft Java版 1.13</td><td>
 <a href="http://www.mcbbs.net/forum.php?mod=attachment&aid=MTE1NTYxN3xlMWQ5YTJiMHwxNTEyMzE2OTQ5fDk3NTUyNXw3NzA5MjM%3D">craftingpp-1.8.zip</a></td><td><a href="//craftingpp.neocities.org/1.8">网站链接</a></td></tr>
+<ul>
+<li><a href="">下载链接</a></li>
+<li><a href="http://www.mcbbs.net/thread-696861-1-1.html">mcbbs介绍帖</a></li>
+</ul>
+
 <tr><td>Minecraft Java版 1.12</td><td>
 <a href="http://www.mcbbs.net/forum.php?mod=attachment&aid=MTA4NDIzM3xhYjM4MDU1NnwxNTExNjI3NjYwfDk3NTUyNXw2OTY4NjE%3D">craftingpp-1.7.4.zip</a></td><td><a href="//craftingpp.neocities.org/1.7.4">网站链接</a></td></tr>
 </tbody></table>
@@ -364,7 +369,7 @@ function change(str){
 <p>不可转载至网盘或文件存储平台。公益服务器可直接使用；非公益服务器需联系我获得授权。通讯类工具可下载后分享。</p>
 
 <h3 id="international">国际化</h3>
-<p>模组大部分文字支持英文，如需其它语言，可自行修改材质中相应文字。如您乐意提供其它语言版本，欢迎<a href="http://www.mcbbs.net/thread-696861-1-1.html">回复原帖</a>或<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">私信我</a>。</p>
+<p>模组大部分文字支持英文，如需其它语言，可自行修改材质中相应文字。如您乐意提供其它语言版本，欢迎<a href="http://www.mcbbs.net/thread-696861-1-1.html">回复原帖</a>、<a href="https://github.com/ruhuasiyu/craftingpp/issues/new">发起issue</a>或<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">私信我</a>。</p>
 
 <h3 id="develop">开发者注意</h3>
 <p>本模组命名空间为cpp，记分板、标签、组等均以cpp为前缀。为便于他人整合使用，烦请避开此前缀。</p>
@@ -3504,7 +3509,8 @@ function change(str){
 
 <article>
 <!--1.8-->
-<p><strong>1.8(元素更新)</strong> 发布时间：预计3月底 大小：1080 KB</p>
+<h3>1.8</h3>
+<p>发布时间：预计3月底 大小：1080 KB</p>
 <ul>
 <li>游戏本体版本升级为1.13，不再支持1.13之前的版本。</li>
 <li>修改资源包文字的代码名称、记分板、标签前缀为cpp，修改资源包以适应1.13。</li>
@@ -3611,209 +3617,6 @@ function change(str){
 <li>下界之星、不死图腾、龙蛋掉落物将不会被破坏。</li>
 </ul>
 
-<button onclick="$(this).next().toggle()">显示/隐藏更早的更新</button>
-<div style="display:none;">
-<!--1.7-->
-<p><strong>1.7 (重组更新)</strong> 发布时间：2017年06月07日 大小：861 KB</p>
-<ul>
-<li>游戏本体版本升级为1.12，不再支持1.12之前的版本。</li>
-<li>移除精制矿物系统。</li>
-<li>将模组划分为活塞工艺、生物制药、绘画雕塑、强化系统、交通设施、角色装饰、进度和其它共8个部分。</li>
-<li>移除木制品和石制品的回收。</li>
-<li>新增回收地狱疣块。</li>
-<li>修改钻石、强力时钟、磁铁、矿物探测器、渔网、传送球的合成配方。</li>
-<li>移除强力时钟。</li>
-<li>新增时间调节器，放置在物品在展示框时，随机刻由3增加至6。</li>
-<li>新增闹钟，放置在物品在展示框时会每小时（实际时间每50秒）字幕报时。</li>
-<li>移除饱和药水。</li>
-<li>交换急迫药水和抗性药水配方。</li>
-<li>修改抗火药水、夜视药水、隐身药水、水肺药水的持续时间为16分钟。</li>
-<li>新增8种矿石种子的合成，种下后生成一个生命值为1的潜影贝，平均每隔5分钟会用矿石替换顶部的牺牲品，每个种子大约可以生产25颗矿石。煤矿石、铁矿石、金矿石、钻石矿石、下界石英矿石、青金石矿石、红石矿石和绿宝石矿石所需的牺牲品分别为石头、煤矿石、铁矿石、金矿石、地狱岩、粘土、青金石矿石、红石矿石。</li>
-<li>修改画“日出·印象”的名称为“印象·日出”。</li>
-<li>新增强化系统，可强化的物品有盔甲、剑锹斧镐、弓、钓鱼竿，从皮革盔甲、木制品、弓、钓鱼竿出发，按指定次序依次消耗8个指定的牺牲品来升级，共20个等级。
-不同等级物品拥有不同的名称、材质、魔咒和属性加成。
-升级后的物品只有30点耐久，需要消耗经验值来回复耐久度。
-各等级牺牲品为燧石、粘土、火药、荧石粉、粘液球、皮革、煤炭、红石、青金石、下界石英、铁锭、金锭、钻石、绿宝石、不死图腾、亡灵之魂、生物之肢、海洋之心、末影之眼、下界之星。
-</li>
-<li>新增四个等级的道路固化剂的合成，依次在红石块上使用可以得到不同等级的道路，玩家在道路上可以获得相应等级的加速效果。</li>
-<li>新增称号系统，每次杀死生物或进行背包合成玩家可以提高功力，根据功力的不同获得不同的前缀称号。</li>
-<li>新增头饰系统。当头盔位置放置了一个南瓜，而副手为指定的一个物品时，会自动佩戴该物品。一共56款样式，包括空气头盔、矿工帽、绷带、绅士帽、长冠、围脖(16款)、厚围脖、超厚围脖、花(14款)、头上长草(4款)、眼镜(6款)、口罩、犄角、奥特曼(7款)。</li>
-<li>删除、修改、新增了一些进度，修复了一些bug。</li>
-<li>新增村民掉落物0-2绿宝石和3经验值。</li>
-<li>移除僵尸村民的掉落物绿宝石。</li>
-<li>新增物品亡灵之魂，属性同毒马铃薯，为僵尸、僵尸村民、僵尸猪人、僵尸马、尸壳、骷髅、流髑、凋灵骷髅和骷髅马的稀有掉落物，天然出现在沙漠神殿、地牢和丛林神庙箱子战利品表。</li>
-<li>新增物品生物之肢，属性同兔子脚，为蜘蛛、洞穴蜘蛛、蠹虫、末影螨和潜影贝的稀有掉落物，天然出现在要塞祭坛、要塞储藏室、废弃矿井箱子战利品表。</li>
-<li>新增物品海洋之心，属性同海晶砂粒，为鱿鱼、守卫者和远古守卫者的稀有掉落物；</li>
-<li>新增物品飞翔之翼，属性同羽毛，为鸡、鹦鹉和蝙蝠未着火时的稀有掉落物；</li>
-<li>新增物品居民之证，属性同绿宝石，为僵尸村民、村民、卫道士和唤魔者的稀有掉落物，天然出现在村庄、林地府邸、雪屋箱子战利品表。</li>
-<li>新增物品末影之灵，属性同末影珍珠，为末影螨、末影人和潜影贝的稀有掉落物；</li>
-<li>新增物品硝火之烬，属性同烈焰粉，为烈焰人、爬行者、恶魂和岩浆怪的稀有掉落物，天然出现在下界要塞箱子战利品表。</li>
-<li>
-新增牛、猪、羊、哞菇、兔子、鸡、鹦鹉、鱿鱼、马、驴、骡、羊驼、北极熊、豹猫、狼、僵尸、僵尸村民、骷髅、爬行者、女巫、蜘蛛、洞穴蜘蛛、史莱姆、尸壳、流髑、骷髅马、守卫者、远古守卫者、村民、卫道士、恼鬼、铁傀儡、雪傀儡、僵尸猪人、烈焰人、恶魂、岩浆怪、末影人、潜影贝和末影龙稀有掉落物为对应生物的头。</li>
-<li>增加钓鱼宝藏鱼头、鲑鱼头、小丑鱼头和河豚头。</li>
-<li>为模组物品和进度添加了英文支持。</li>
-<li>修改终末之诗为海绵宝宝主题曲。</li>
-<li>添加了一个彩蛋：传送球一次可以合成四个。</li>
-<li>调整了函数的分布，大幅度降低了卡顿。</li>
-</ul>
-<!--1.7.1-->
-<p><strong>1.7.1</strong> 发布时间：2017年06月08日 大小：861 KB</p>
-<ul>
-<li>修复了材质中的文字错误。</li>
-<li>修复了称号系统的数据与描述不符。</li>
-<li>修复了强化物品的耐久值错误。</li>
-<li>调整了时间调节器对于随机刻加成由+3变为+1。</li>
-</ul>
-<!--1.7.2-->
-<p><strong>1.7.2</strong> 发布时间：2017年06月09日 大小：862 KB</p>
-<ul>
-<li>精简了时间调节器、闹钟的代码。</li>
-<li>新增了闹钟的音效，清晨和傍晚会报时，音效为entity.player.levelup，音量20，音调1.5。</li>
-</ul>
-<!--1.7.3-->
-<p><strong>1.7.3</strong> 发布时间：2017年06月15日 大小：863 KB</p>
-<ul>
-<li>修复了制作钻石的配方中错误，应为煤炭却为煤炭块。</li>
-<li>为安装包添加了安装说明。</li>
-</ul>
-<!--1.7.4-->
-<p><strong>1.7.4</strong> 发布时间：2017年06月16日 大小：863 KB</p>
-<ul>
-<li>修复了《最后的晚餐》和《落霞孤鹜图》合成后缺少一张的问题。</li>
-</ul>
-
-<!--1.6-->
-<p><strong>1.6 (科学更新)</strong> 发布时间：2017年05月12日 大小：681 KB</p>
-<ul>
-<li>游戏本体版本升级为1.12 pre，不再支持1.12之前的版本。</li>
-<li>不再支持使用粘性活塞回收。</li>
-<li>新增回收斧锹锄。</li>
-<li>调整所有回收产物为1。</li>
-<li>修改压制钻石配方。</li>
-<li>新增压制鞍、蜘蛛网、马铠、粘土、浮冰。</li>
-<li>删除鸟刷怪蛋，增加鹦鹉、卫道士、幻术师刷怪蛋的合成。</li>
-<li>恢复精制矿物合成材料为需要使用低一级的精制矿物。</li>
-<li>修复了精制煤炭的名称。</li>
-<li>调整锹的合成形状为通常形状。</li>
-<li>修复了剑和护腿不在对应槽位也有属性加成和护腿的盔甲错误。</li>
-<li>为精制矿物合成的剑添加了横扫之刃魔咒。</li>
-<li>调整传送的距离为200米。</li>
-<li>为磁铁加入冷却，时间为5秒。</li>
-<li>修复矿物探测器和传送球的漏洞。</li>
-<li>新增附魔金苹果的合成。</li>
-<li>删除了建筑和植物的合成。</li>
-<li>新增树种的合成，放置在羊毛/树叶可以得到不同的树。</li>
-<li>修改画的合成配方。</li>
-<li>删除了画：春夏秋冬；增加了画：岩间圣母、创造亚当、伏尔加河上的纤夫、开国大典、无名女郎。</li>
-<li>增加24种进度。</li>
-<li>有几率天然生成高压爬行者。</li>
-<li>增加僵尸猪掉落物0-1猪肉。</li>
-<li>增加僵尸村民被玩家杀死时掉落0-1绿宝石，不受抢夺附魔影响。</li>
-<li>增加村民掉落物0-4绿宝石。</li>
-<li>增加驴、骡、马、羊驼掉落物1-3生驴、骡、马、羊驼肉（属性同羊肉）、鹦鹉掉落物1-2生鹦鹉肉（属性同鸡肉）、北极熊掉落物1-4生熊肉（属性同牛肉），着火时掉落对应熟肉。</li>
-<li>增加哞菇掉落物3-5红蘑菇。</li>
-<li>鸡、鹦鹉着火时死亡将不掉落羽毛。</li>
-<li>唤魔者掉落物不死图腾修改为金色。</li>
-<li>新增钓鱼宝藏湿海绵；新增钓鱼垃圾火药，和腐肉等权重。</li>
-<li>移除了模组所需的命令方块，改为使用函数实现。</li>
-<li>修改了材质的文字部分。</li>
-<li>修复了GUI材质透明错误。</li>
-</ul>
-<!--1.6.1-->
-<p><strong>1.6.1</strong> 发布时间：2017年05月13日 大小：681 KB</p>
-<ul>
-<li>现在可以一次性回收64个安山岩、闪长岩、花岗岩，16个石英块，64个木炭。</li>
-<li>现在可以一次性合成8或64个精制矿物。</li>
-<li>修复无法回收石英块的错误。</li>
-<li>修复了仍能使用粘性活塞回收的错误。</li>
-</ul>
-
-<!--1.5-->
-<p><strong>1.5 (结构更新)</strong> 发布时间：2016年10月24日 大小：13×13×12</p>
-<ul>
-<li>新增生物鸟和鸟刷怪蛋的合成。</li>
-<li>现在粘性活塞可以代替活塞参与回收。</li>
-<li>新增建筑：铁匠铺、沙漠神庙、末地船、遗迹、图书馆。</li>
-<li>新增植物：橡树、云杉树、白桦树、金合欢树、灌木。</li>
-<li>新增画：呐喊、蒙娜丽莎、最后的晚餐、向日葵、日出·印象、阿让特伊莫奈花园里的卡美伊·莫奈和孩子、春、夏、秋、冬。</li>
-<li>修改药水名称和颜色。</li>
-<li>矿物探测时长由8秒修改为5秒。</li>
-<li>修改盔甲合成配方。</li>
-<li>精简合成代码。</li>
-</ul>
-<!--1.5.1-->
-<p><strong>1.5.1</strong> 发布时间：2016年10月25日 大小：13×13×12</p>
-<ul>
-<li>修改精制矿物、矿物探测器、遗迹的合成配方。</li>
-<li>调整命令方块的循环方式，通过降低合成速度来减少卡顿。</li>
-<li>修复bug。</li>
-</ul>
-<!--1.5.2-->
-<p><strong>1.5.2</strong> 发布时间：2016年11月12日 大小：13×13×12</p>
-<ul>
-<li>修改精制矿物合成的工具附魔次序。</li>
-<li>修复盔甲不能正确提供护甲的bug。</li>
-<li>取消精制靴子的速度效果。</li>
-<li>新增物品强力时钟，增加100%的速度。</li>
-<li>新增画：星夜、自由引导人民、拾穗者、落霞孤鹜图、竹石图。</li>
-<li>增减了材质的一些标语。</li>
-</ul>
-
-<!--1.4-->
-<p><strong>1.4 (工具更新)</strong> 发布时间：2016年10月13日 大小：13×11×12</p>
-<ul>
-<li>现在活塞可以回收鞍。</li>
-<li>新增物品磁铁、矿物探测、渔网。</li>
-<li>精简代码。</li>
-<li>现在模组开关被破坏后可恢复。</li>
-</ul>
-<!--1.4.1-->
-<p><strong>1.4.1</strong> 发布时间：2016年10月17日 大小：13×11×12</p>
-<ul>
-<li>添加模组专用材质，包含背包合成区域GUI的修改、标语等。</li>
-<li>修复bug。</li>
-</ul>
-
-<!--1.3-->
-</ul>
-<p><strong>1.3 (效率更新)</strong> 发布时间：2016年10月08日 大小：13×10×13</p>
-<ul>
-<li>新增精制矿物合成锹、斧、传送球。</li>
-<li>删除地标。</li>
-<li>新增高级药水的合成。</li>
-<li>模组名称更改为“更多的合成”。</li>
-</ul>
-
-<!--1.2-->
-</ul>
-<p><strong>1.2 (实体更新)</strong> 发布时间：2016年10月02日 大小：18×6×11</p>
-<ul>
-<li>游戏本体版本升级为1.11，不再支持1.11之前的版本。</li>
-<li>新增唤魔者和羊驼刷怪蛋的合成。</li>
-</ul>
-	
-<!--1.1-->
-<p><strong>1.1 (美化更新)</strong> 发布时间：2016年08月05日 大小：18×6×11</p>
-<ul>
-<li>现在活塞可以回收花岗岩、闪长岩、安山岩以得到下界石英。</li>
-<li>将松散的石头、疏松的石头、普通的石头、紧密的石头、致密的石头更改为精制煤、精制铁锭、精制金锭、精制钻石、精制下界之星，去掉所有关于密度的描述。</li>
-<li>修改“回到 地标”合成配方，种类数由9减少为8。</li>
-<li>模组更改为相对坐标，合成方式由投掷器修改为玩家背包。</li>
-<li>精简代码，增加了封装和开关。</li>
-</ul>
-
-<!--1.0-->
-<p><strong>1.0</strong> 发布时间：2016年08月05日</p>
-<ul>
-<li>新增羊、牛、鸡、猪、兔子、哞菇、蝙蝠、鱿鱼、村民、北极熊、蠹虫、
-潜影贝、骷髅、凋灵骷髅、女巫、僵尸、僵尸猪人、史莱姆、岩浆怪、恶魂、烈焰人、蜘蛛、洞穴蜘蛛、爬行者、高压爬行者、末影人、末影螨、远古守卫者、
-守卫者、马、驴、豹猫、狼共33种怪物蛋的合成。</li>
-<li>现在活塞可以回收剑、镐、盔甲、矿车、马铠，制作煤炭、钻石。</li>
-<li>新增“放置 地标”和“回到 地标”，可用于在主世界传送。</li>
-<li>新增物品松散的石头、疏松的石头、普通的石头、紧密的石头、致密的石头，可以用来制作剑、镐、盔甲和地标。</li>
-</ul>
-
-
 
 <!--1.9
 <tr class="even">
@@ -3827,9 +3630,9 @@ function change(str){
 <tr class="even"><td>新增画：CBL，TRP，TCP。</td></tr>
 <tr class="even"><td>新增双向传送器。</td></tr>
 
--->
 
-</div>
+<div style="cursor:pointer;position:fixed;bottom:80px;left:95%;background:url(http://www.mcbbs.net/template/mcbbs/img/mc_creeper.gif) no-repeat; visibility: visible;height:200px;width:80px" id="scrolltop" onclick="window.scrollTo('0','0')"></div>
+-->
 </article>
 <script>
 $(document).ready(function(){
@@ -3838,14 +3641,9 @@ $(document).ready(function(){
 	$("img.challenge").attr("src","https://hydra-media.cursecdn.com/minecraft-zh.gamepedia.com/9/96/Advancement-fancy-raw.png");
 });
 </script>
-<div style="cursor:pointer;position:fixed;bottom:80px;left:95%;background:url(http://www.mcbbs.net/template/mcbbs/img/mc_creeper.gif) no-repeat; visibility: visible;height:200px;width:80px" id="scrolltop" onclick="window.scrollTo('0','0')"></div>
-
-
-
-
 
 <footer>
-<p><a href="https://craftingpp.neocities.org">官网</a> | <a href="http://www.mcbbs.net/thread-696861-1-1.html">mcbbs帖子</a> | 联系作者：<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">ruhuasiyu@mcbbs</a> | 最后更新 2018-01-31</p>
+<p>联系作者：<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">ruhuasiyu@mcbbs</a> | 最后更新 2018-01-31</p>
 </footer>
 
 
