--- a/versions/index.html
+++ b/versions/index.html
@@ -3,7 +3,7 @@
 <html lang="zh-cmn-Hans">
 <head>
 <meta charset="utf-8" />
-<title>更多的合成 Crafting++ v1.8</title>
+<title>更多的合成 Crafting++</title>
 <meta name='author' content='ruhuasiyu@mcbbs' />
 <meta name='keywords' content='minecraft, 原版模组, mod' />
 <meta name='description' content='Minecraft 原版模组 更多的合成' />
