移除冗余链接

--- a/versions/1.8/index.html
+++ b/versions/1.8/index.html
@@ -349,20 +349,9 @@ function change(str){
 <p class="center"><img src="https://public.lightpic.info/image/15EA_59153D760.jpg" /></p>
 
 <h3 id="download">下载与安装</h3>
-<table><thead><tr><th>支持的minecraft版本</th><th>模组版本及下载链接</th><th>简介</th></tr></thead>
-<tbody>
-<tr><td>Minecraft Java版 1.13</td><td>
-<a href="http://www.mcbbs.net/forum.php?mod=attachment&aid=MTE1NTYxN3xlMWQ5YTJiMHwxNTEyMzE2OTQ5fDk3NTUyNXw3NzA5MjM%3D">craftingpp-1.8.zip</a></td><td><a href="//craftingpp.neocities.org/1.8">网站链接</a></td></tr>
-<ul>
-<li><a href="">下载链接</a></li>
-<li><a href="http://www.mcbbs.net/thread-696861-1-1.html">mcbbs介绍帖</a></li>
-</ul>
+<p><a href="">点此下载</a>，<a href="http://www.mcbbs.net/thread-696861-1-1.html">点此查看mcbbs介绍帖</a>。</p>
 
-<tr><td>Minecraft Java版 1.12</td><td>
-<a href="http://www.mcbbs.net/forum.php?mod=attachment&aid=MTA4NDIzM3xhYjM4MDU1NnwxNTExNjI3NjYwfDk3NTUyNXw2OTY4NjE%3D">craftingpp-1.7.4.zip</a></td><td><a href="//craftingpp.neocities.org/1.7.4">网站链接</a></td></tr>
-</tbody></table>
 <p>将解压缩后的 <code>datapacks</code>, <code>data</code>, <code>resources.zip</code> 放入 <code>.minecraft/saves/世界名称</code> 文件夹，然后退出世界重进即可。</p>
-<p>如需其它版本，请直接联系我，但我强烈不建议使用旧版本，因其安装方式繁琐，卡顿也较严重。此外，旧版本一律不再更新。</p>
 
 <h3 id="declaration">声明</h3>
 <p>转载须需遵守<strong><a href="https://creativecommons.org/licenses/by-nc-nd/2.5/cn/">CC BY-NC-ND 2.5 CN 许可协议</a></strong>——列出作者(<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">ruhuasiyu@mcbbs</a>)、来源(<a href="https://craftingpp.neocities.org">官网</a>或<a href="http://www.mcbbs.net/thread-696861-1-1.html">mcbbs帖子</a>)、原始下载链接以及相同的许可协议。</p>
