--- a/versions/1.8/index.html
+++ b/versions/1.8/index.html
@@ -9,13 +9,13 @@
 <meta name='description' content='Minecraft 原版模组 更多的合成' />
 <meta name='revised' content='ruhuasiyu@mcbbs' />
 <base href="" />
-<script src="http://lib.sinaapp.com/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
+<script src="https://lib.sinaapp.com/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
 <link rel="shortcut icon" href="https://zsx.neocities.org/main/favicon.ico" />
 <link rel="stylesheet" href="items/items_css.css" />
 <style>
 @font-face{
 	font-family:Minecraft;
-	src:url("http://hydra-media.cursecdn.com/hydra/fonts/minecraft.eot?#iefix"),url(http://hydra-media.cursecdn.com/hydra/fonts/minecraft.woff) format("woff"),url(http://hydra-media.cursecdn.com/hydra/fonts/minecraft.ttf) format("truetype");
+	src:url("https://hydra-media.cursecdn.com/hydra/fonts/minecraft.eot?#iefix"),url(https://hydra-media.cursecdn.com/hydra/fonts/minecraft.woff) format("woff"),url(https://hydra-media.cursecdn.com/hydra/fonts/minecraft.ttf) format("truetype");
 }
 <!--mcui style-->
 .invslot{
