--- a/versions/index.html
+++ b/versions/index.html
@@ -9,8 +9,8 @@
 <meta name='description' content='Minecraft 原版模组 更多的合成' />
 <meta name='revised' content='ruhuasiyu@mcbbs' />
 <base href="" />
-<script src="http://lib.sinaapp.com/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
-<link rel="shortcut icon" href="https://zsx.neocities.org/main/favicon.ico" />
+<script src="https://lib.sinaapp.com/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
+<link rel="shortcut icon" href="items/favicon.ico" />
 <link rel="stylesheet" href="items/items_css.css" />
 <style>
 <!--table style-->
