--- a/versions/index.html
+++ b/versions/index.html
@@ -10,8 +10,7 @@
 <meta name='revised' content='ruhuasiyu@mcbbs' />
 <base href="" />
 <script src="https://lib.sinaapp.com/js/jquery/1.9.1/jquery-1.9.1.min.js"></script>
-<link rel="shortcut icon" href="items/favicon.ico" />
-<link rel="stylesheet" href="items/items_css.css" />
+<link rel="shortcut icon" href="1.8/items/favicon.ico" />
 <style>
 <!--table style-->
 .thead, thead th{
@@ -119,8 +118,7 @@ strong{
 
 </head>
 
-<body onload="change('intro')">
-
+<body>
 
 <header style="background:purple; padding:1px; margin-top:0;">
 <h1>更多的合成 | Crafting++<br/>
