--- a/versions/1.7/index.html
+++ b/versions/1.7/index.html
@@ -799,7 +799,7 @@ li{
 <p><strong>材质说明</strong>：由于加入了模组专用材质，因此加载世界会比较慢。如果希望加快加载速度，可将存档文件夹中resources.zip移动到.minecraft/resourcepacks文件夹，然后从菜单中选择该材质。
 该材质对游戏的GUI和文字做了一些修改，如果不使用该材质，会导致模组物品名称无法正常显示！</p>
 <p><strong>配置要求</strong>：尽管该模组内容较多，但是并不会占用太多电脑资源。如果你仍然感受到卡顿，请尝试通过减少视距来提高帧率。</p>
-<p><strong>版权声明</strong>：你可以转载该贴，但需在遵守<a href="https://creativecommons.org/licenses/by-nc-nd/2.5/cn/">知识共享署名-非商业性使用-禁止演绎 2.5 中国大陆许可协议</a>下使用。</p>
+<p><strong>版权声明</strong>：你可以转载该贴/页面，但需在遵守<a href="https://creativecommons.org/licenses/by-nc-nd/2.5/cn/">知识共享署名-非商业性使用-禁止演绎 2.5 中国大陆许可协议</a>下使用。模组本身使用GPL协议。</p>
 <p><strong>欢迎回复本帖或私信我反馈意见、建议、脑洞和特性(BUG)！</strong></p>
 
 <!--<h3>旧版本</h3>
