--- a/versions/1.8/index.html
+++ b/versions/1.8/index.html
@@ -354,7 +354,7 @@ function change(str){
 <p>将解压缩后的 <code>datapacks</code>, <code>data</code>, <code>resources.zip</code> 放入 <code>.minecraft/saves/世界名称</code> 文件夹，然后退出世界重进即可。</p>
 
 <h3 id="declaration">声明</h3>
-<p>转载须需遵守<strong><a href="https://creativecommons.org/licenses/by-nc-nd/2.5/cn/">CC BY-NC-ND 2.5 CN 许可协议</a></strong>——列出作者(<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">ruhuasiyu@mcbbs</a>)、来源(<a href="https://craftingpp.neocities.org">官网</a>或<a href="http://www.mcbbs.net/thread-696861-1-1.html">mcbbs帖子</a>)、原始下载链接以及相同的许可协议。</p>
+<p>转载本文须需遵守<strong><a href="https://creativecommons.org/licenses/by-nc-nd/2.5/cn/">CC BY-NC-ND 2.5 CN 许可协议</a></strong>——列出作者(<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">ruhuasiyu@mcbbs</a>)、来源、原始下载链接以及相同的许可协议。模组代码需遵守GPL协议。</p>
 <p>不可转载至网盘或文件存储平台。公益服务器可直接使用；非公益服务器需联系我获得授权。通讯类工具可下载后分享。</p>
 
 <h3 id="international">国际化</h3>
