--- a/versions/1.8/index.html
+++ b/versions/1.8/index.html
@@ -3662,9 +3662,9 @@ function change(str){
 </article>
 <script>
 $(document).ready(function(){
-	$("img.normal").attr("src","https://hydra-media.cursecdn.com/minecraft-zh.gamepedia.com/f/fa/Achievement-plain.png");
-	$("img.goal").attr("src","https://hydra-media.cursecdn.com/minecraft-zh.gamepedia.com/4/41/Advancement-oval-raw.png");
-	$("img.challenge").attr("src","https://hydra-media.cursecdn.com/minecraft-zh.gamepedia.com/9/96/Advancement-fancy-raw.png");
+	$("img.normal").attr("src","items/normal.png");
+	$("img.goal").attr("src","items/goal.png");
+	$("img.challenge").attr("src","items/challenge.png");
 });
 </script>
 
@@ -3695,20 +3695,9 @@ redstone 4.5+f/2=6、7
 红火	硝火之烬	难
 紫木	末影之灵	很难
 
-craftingpp.dpp.item
-craftingpp.ef.item
-craftingpp.vpp.item
-记分板、标签、组前缀cpp
-资源包前缀craftingpp
-命名空间 cpp_dpp, cpp_ef, cpp_vpp
-
-CPP更多的合成=更多的掉落物+元素之力+更多的村民
-更多的掉落物=战利品表、原版合成、建筑、树种 Drops Plus Plus DPP
-元素之力=元素之力+饮食+附魔书合成+画+头饰+称号 Element Force EF
-更多的村民 Villager Plus Plus VPP
-
+未来：更多的村民
+未来：更多的技能
 未来：更多的作物 Crops Plus Plus
-
 未来：魔法牌 Magic Cards
 
 -->
