--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ function change(str){
 
 <h3 id="bagcraft">背包合成</h3>
 <p>涉及模组新增物品的合成均采用背包合成，方式如下：将材料放入背包右上角对应的3×3的格子里即可自动得到产物，数量和位置须完全吻合。</p>
-<p class="center"><img src="https://public.lightpic.info/image/15EA_59153D760.jpg" /></p>
+<p><img style="width:30%" src="versions/1.8/items/screenshots/craft.png" /></p>
 
 <h3 id="declaration">声明</h3>
 <p>转载本文须需遵守<strong><a href="https://creativecommons.org/licenses/by-nc-nd/2.5/cn/">CC BY-NC-ND 2.5 CN 许可协议</a></strong>——列出作者(<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">ruhuasiyu@mcbbs</a>)、来源、原始下载链接以及相同的许可协议。模组代码需遵守GPL协议。</p>
@@ -181,9 +181,9 @@ function change(str){
 <table><thead><tr><th>支持的minecraft版本</th><th>模组版本及下载链接</th><th>简介</th></tr></thead>
 <tbody>
 <tr><td>Minecraft Java版 1.13</td><td>
-<a href="">craftingpp-1.8</a></td><td><a href="1.8/index.html">网站链接</a></td></tr>
+<a href="">craftingpp-1.8</a></td><td><a href="versions/1.8/index.html">网站链接</a></td></tr>
 <tr><td>Minecraft Java版 1.12</td><td>
-<a href="http://www.mcbbs.net/forum.php?mod=attachment&aid=MTA4NDIzM3xhYjM4MDU1NnwxNTExNjI3NjYwfDk3NTUyNXw2OTY4NjE%3D">craftingpp-1.7.4</a></td><td><a href="1.7/index.html">网站链接</a></td></tr>
+<a href="http://www.mcbbs.net/forum.php?mod=attachment&aid=MTA4NDIzM3xhYjM4MDU1NnwxNTExNjI3NjYwfDk3NTUyNXw2OTY4NjE%3D">craftingpp-1.7.4</a></td><td><a href="versions/1.7/index.html">网站链接</a></td></tr>
 <tr><td>Minecraft Java版 1.12 pre</td><td>
 <a href="http://www.mcbbs.net/thread-614296-1-1.html">craftingpp-1.6.1</a></td><td><a href="http://www.mcbbs.net/thread-614296-1-1.html">网站链接</a></td></tr>
 <tr><td>Minecraft Java版 1.11</td><td>craftingpp-1.5</td><td>不再提供</td></tr>
