--- a/versions/1.8/index.html
+++ b/versions/1.8/index.html
@@ -340,7 +340,7 @@ function change(str){
 
 <h3>背包合成</h3>
 <p>涉及模组新增物品的合成均采用背包合成，方式如下：将材料放入背包右上角对应的3×3的格子里即可自动得到产物，数量和位置须完全吻合。</p>
-<p><img style="width:30%" src="items/screenshots/craft.png" /></p>
+<p class="center"><img src="items/screenshots/craft.png" /></p>
 
 <h3 id="download">下载与安装</h3>
 <p><a href="">下载后</a>，将解压缩后的 <code>datapacks</code>, <code>data</code>, <code>resources.zip</code> 放入 <code>.minecraft/saves/世界名称</code> 文件夹，然后退出世界重进即可。</p>
@@ -678,7 +678,7 @@ function change(str){
 <tr><td>钻石矿石</td><td><strong id="diamond_dust">钻石粉 (Diamond Dust)</strong></td></tr>
 <tr><td>绿宝石矿石</td><td><strong id="emerald_dust">绿宝石粉 (Emerald Dust)</strong></td></tr>
 <tr><td>红石矿石</td><td>6红石、1红石块</td></tr>
-<tr><td>青金石矿石</td><td>5<strong id="lapis_dust">青金石粉 (Lapis Dust)</strong></td></tr>
+<tr><td>青金石矿石</td><td>4<strong id="lapis_dust">青金石粉 (Lapis Dust)</strong></td></tr>
 <tr><td>石英矿石</td><td><strong id="quartz_dust">石英粉 (Quartz Dust)</strong></td></tr>
 
 <tr><td>铁块</td><td rowspan="7">附魔之瓶</td><td>3铁粉</td><td rowspan="7">耗时10秒</td></tr>
@@ -786,7 +786,7 @@ function change(str){
 <span class="experience_bottle" title="附魔之瓶">
 </span></span></td><td>消耗玩家1点经验。<br />消耗玩家2点经验。<br />消耗玩家4点经验。</td></tr>
 
-<tr><th>64迷你附魔瓶<br />64附魔小瓶<br />64附魔之瓶</th><td>漏斗+64玻璃瓶<br />漏斗+64迷你附魔瓶<br />漏斗+64附魔小瓶</td>
+<tr><th>64迷你附魔瓶<br />64附魔小瓶<br />64附魔之瓶</th><td>漏斗+64玻璃瓶<br />漏斗+64<a href="#mini_experience_bottle">迷你附魔瓶</a><br />漏斗+64<a href="#small_experience_bottle">附魔小瓶</a></td>
 <td><span class="mcui"><span><span class="mcui-row"><span class="empty">
 </span><span class="hopper" title="漏斗"><span class="stacksize">0</span>
 </span><span class="empty">
@@ -1642,7 +1642,6 @@ function change(str){
 <ul>
 <li>荧光帽——使玩家发光，但是并不提供照明。</li>
 <li>非酋帽——自带霉运效果。</li>
-<li>红色外套——可加速时间1.67%。</li>
 <li>雪地靴——玩家在雪上会跑得更快。</li>
 </ul>
 
@@ -1728,15 +1727,15 @@ function change(str){
 <td><span class="mcui-row"><span class="white_carpet"></span></span></td>
 <td><span class="mcui-row"><span class="snow"></span></span></td>
 <td><span class="mcui-row"><span class="iron_trapdoor"></span></span></td>
-<td><span class="mcui-row"><span class="empty"><img src="https://hydra-media.cursecdn.com/minecraft-zh.gamepedia.com/3/37/Poppy.png" style="height:32px;"></span></span></td>
-<td><span class="mcui-row"><span class="empty"><img src="https://hydra-media.cursecdn.com/minecraft-zh.gamepedia.com/3/34/TallGrass.gif" style="height:32px;"></span></span></td>
+<td><span class="mcui-row"><span class="poppy"></span></span></td>
+<td><span class="mcui-row"><span class="grass"></span></span></td>
 <td><span class="mcui-row"><span class="oak_fence_door"></span></span></td>
 <td><span class="mcui-row"><span class="daylight_detector"></span></span></td>
 <td><span class="mcui-row"><span class="end_rod"></span></span></td>
 <td><span class="mcui-row"><span class="oak_fence"></span></span></td></tr>
 <tr><td><strong>空气头盔</strong></td><td><strong>矿工帽</strong></td><td><strong>绷带</strong></td><td><strong>绅士帽</strong></td><td><strong>长冠</strong></td><td><strong>围脖</strong></td><td><strong>厚围脖</strong></td><td><strong>超厚围脖</strong></td><td><strong>花</strong></td><td><strong>头上长草</strong></td><td><strong>眼镜</strong></td><td><strong>口罩</strong></td><td><strong>犄角</strong></td><td><strong>奥特曼</strong></td></tr>
 </tbody></table>
-<p class="center"><img src="https://ooo.0o0.ooo/2017/05/30/592d75c810dba.png" /></p>
+<p class="center"><img src="items/screenshots/head.png" /></p>
 
 <h3>树种</h3>
 <p>融合骨块、绿宝石、树苗得到，可一次合成64个。使用时，沿竖直方向依次放置主色方块、副色方块、树种即可自动种下。主副色方块需为羊毛或树叶。</p>
