--- a/versions/1.8/index.html
+++ b/versions/1.8/index.html
@@ -15,7 +15,7 @@
 <style>
 @font-face{
 	font-family:Minecraft;
-	src:url("https://hydra-media.cursecdn.com/hydra/fonts/minecraft.eot?#iefix"),url(https://hydra-media.cursecdn.com/hydra/fonts/minecraft.woff) format("woff"),url(https://hydra-media.cursecdn.com/hydra/fonts/minecraft.ttf) format("truetype");
+	src:url("items/minecraft.eot"),url("items/minecraft.woff") format("woff");
 }
 <!--mcui style-->
 .invslot{
@@ -51,7 +51,7 @@
 	text-align:left;
 }
 .mcui-arrow{
-	background:url(https://i.loli.net/2017/11/30/5a2025c9c6b5c.png) no-repeat;
+	background:url("items/Arrow.png") no-repeat;
 	width:32px;
 	height:26px;
 	margin:40px 4px 0;
@@ -92,7 +92,7 @@
 	display:block;
 	width:19px;
 	height:15px;
-	background-image:url(https://i.loli.net/2017/11/30/5a2025c9c8690.png)
+	background-image:url(items/Grid_layout_Shapeless.png);
 }
 .stacksize, .enchant{
 	position:absolute;
@@ -128,13 +128,13 @@ span.colorful_items{
 	background-size: 288px 416px;
 }
 span.magma_block{
-	background-image: url(https://i.loli.net/2017/11/30/5a2025c9c9df3.gif);
+	background-image: url(items/magma_block.gif);
 }
 span.prismarine{
-	background-image: url(https://i.loli.net/2017/11/30/5a2025ca10253.gif);
+	background-image: url(items/prismarine.gif);
 }
 span.xp_orb{
-	background-image: url(https://i.loli.net/2017/11/30/5a2025c9cef02.gif);
+	background-image: url(items/xp_orb.gif);
 	background-size: 32px 32px;
 }
 span.fire{
